Added UI changes for the whole app to use tabs as default style for organizing data on pages

--- a/DigitizingDataAdminApp/DigitizingDataAdminApp.csproj
+++ b/DigitizingDataAdminApp/DigitizingDataAdminApp.csproj
@@ -537,27 +537,25 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\Shared\_CustomLayout.cshtml" />
+    <Content Include="Views\Shared\_MainLayout.cshtml" />
     <Content Include="Views\Shared\_SideMenu.cshtml" />
     <Content Include="Views\Dashboard\SystemUsers.cshtml" />
-    <Content Include="Views\Dashboard\VslaData.cshtml" />
+    <Content Include="Views\Dashboard\VslaGroupInformation.cshtml" />
     <Content Include="Views\Dashboard\TechnicalTrainers.cshtml" />
     <Content Include="Views\Dashboard\EditUser.cshtml" />
     <Content Include="Views\Dashboard\DeleteUser.cshtml" />
     <Content Include="Views\Dashboard\UserDetails.cshtml" />
-    <Content Include="Views\Dashboard\VslaDetails.cshtml" />
-    <Content Include="Views\Dashboard\EditVsla.cshtml" />
-    <Content Include="Views\Dashboard\AddVsla.cshtml" />
-    <Content Include="Views\Dashboard\DeleteVsla.cshtml" />
+    <Content Include="Views\Dashboard\VslaGroupDetails.cshtml" />
+    <Content Include="Views\Dashboard\EditVslaGroup.cshtml" />
+    <Content Include="Views\Dashboard\DeleteVslaGroup.cshtml" />
     <Content Include="Views\Dashboard\TrainersDetails.cshtml" />
     <Content Include="Views\Dashboard\DeleteTrainer.cshtml" />
     <Content Include="Views\Dashboard\EditTrainerDetails.cshtml" />
-    <Content Include="Views\Shared\_CustomLoginPage.cshtml" />
-    <Content Include="Views\Dashboard\LogsData.cshtml" />
+    <Content Include="Views\Shared\_LoginPage.cshtml" />
     <Content Include="Views\Dashboard\Dashboard.cshtml" />
-    <Content Include="Views\Dashboard\VslaMembers.cshtml" />
-    <Content Include="Views\Dashboard\VslaMeetings.cshtml" />
-    <Content Include="Views\Dashboard\MemberDetails.cshtml" />
+    <Content Include="Views\Dashboard\VslaGroupMembers.cshtml" />
+    <Content Include="Views\Dashboard\VslaGroupMeetings.cshtml" />
+    <Content Include="Views\Dashboard\GroupMemberDetails.cshtml" />
     <Content Include="Views\Dashboard\SingleMeetingDetails.cshtml" />
     <Content Include="Views\Shared\Date.cshtml" />
     <Content Include="Views\Dashboard\VslaReporting.cshtml" />
