Renamed 'Cbt_info' table to 'TechnicalTrainer' and remade the subsequent mappings

--- a/DigitizingDataDomain/DigitizingDataDomain.csproj
+++ b/DigitizingDataDomain/DigitizingDataDomain.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Mapping\MeetingMap.cs" />
     <Compile Include="Mapping\MemberMap.cs" />
     <Compile Include="Mapping\SavingMap.cs" />
-    <Compile Include="Mapping\Cbt_infoMap.cs" />
+    <Compile Include="Mapping\TechnicalTrainerMap.cs" />
     <Compile Include="Mapping\StatusTypeMap.cs" />
     <Compile Include="Mapping\VslaCycleMap.cs" />
     <Compile Include="Mapping\VslaDdActivationMap.cs" />
@@ -95,7 +95,7 @@
     <Compile Include="Model\Meeting.cs" />
     <Compile Include="Model\Member.cs" />
     <Compile Include="Model\Saving.cs" />
-    <Compile Include="Model\Cbt_info.cs" />
+    <Compile Include="Model\TechnicalTrainer.cs" />
     <Compile Include="Model\StatusType.cs" />
     <Compile Include="Model\Vsla.cs" />
     <Compile Include="Model\VslaCycle.cs" />
