--- a/DigitizingDataBizLayer/DigitizingDataBizLayer.csproj
+++ b/DigitizingDataBizLayer/DigitizingDataBizLayer.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Repositories\MemberRepo.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\SavingRepo.cs" />
-    <Compile Include="Repositories\Cbt_infoRepo.cs" />
+    <Compile Include="Repositories\TechnicalTrainerRepo.cs" />
     <Compile Include="Repositories\VslaCycleRepo.cs" />
     <Compile Include="Repositories\VslaDdActivationRepo.cs" />
     <Compile Include="Repositories\VslaRegionRepo.cs" />
