--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -86,7 +86,8 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-  <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.157;initial catalog=ledgerlink;user id=aggrey;password=gram33n1234$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Grameen;Password=gram33n1234$;"/>
+  <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.157;initial catalog=ledgerlink;user id=Grameen;password=gram33n1234$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <!--section for log4net, the error logging library-->
   <log4net debug="true">
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
