Migrating System users from EF to NHibernate

--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -86,7 +86,7 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-  <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Grameen;Password=gram33n1234$;"/>
+  <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Capito;Password=gram33n1234$;"/>
   <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.157;initial catalog=ledgerlink;user id=Grameen;password=gram33n1234$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <!--section for log4net, the error logging library-->
   <log4net debug="true">
