Added new functionality for project implementers

--- a/DigitizingDataBizLayer/DigitizingDataBizLayer.csproj
+++ b/DigitizingDataBizLayer/DigitizingDataBizLayer.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Repositories\DataSubmissionRepo.cs" />
     <Compile Include="Repositories\FineRepo.cs" />
     <Compile Include="Repositories\GroupSupportRepo.cs" />
+    <Compile Include="Repositories\ImplementersRepo.cs" />
     <Compile Include="Repositories\LoanIssueRepo.cs" />
     <Compile Include="Repositories\LoanRepaymentRepo.cs" />
     <Compile Include="Repositories\MeetingRepo.cs" />
