--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -76,6 +76,10 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.4000" newVersion="3.3.1.4000" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -86,8 +90,8 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-  <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Capito;Password=gram33n1234$;"/>
-  <!--<add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.157;initial catalog=ledgerlink;user id=Grameen;password=gram33n1234$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
+    <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Capito;Password=gram33n1234$;" />
+    <!--<add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.157;initial catalog=ledgerlink;user id=Grameen;password=gram33n1234$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
   </connectionStrings>
   <!--section for log4net, the error logging library-->
   <log4net debug="true">
