--- a/DigitizingDataAdminWebService/bin/DigitizingDataAdminWebService.dll.config
+++ b/DigitizingDataAdminWebService/bin/DigitizingDataAdminWebService.dll.config
@@ -5,13 +5,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Grameen;Password=gram33n1234$;" />
+    <add name="MSSQL2012" providerName="System.Data.SqlClient" connectionString="Server=192.168.1.157;Database=ledgerlink;User Id=Grameen;Password=gram33n1234$;"/>
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
-    <compilation targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
@@ -57,8 +57,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.3.1.4000" newVersion="3.3.1.4000" />
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.4000" newVersion="3.3.1.4000"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -80,4 +80,3 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
 </configuration>
-<!--ProjectGuid: {009094C9-D30B-4D1B-B95C-BEDE8C6B8F31}-->
